--- a/x.css
+++ b/x.css
@@ -26,7 +26,7 @@ input[type="text"],
 input[type="password"],
 select,
 textarea {
-    width: calc(100% - 20px);
+    width: calc(20px);
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
