--- a/x.css
+++ b/x.css
@@ -1,6 +1,6 @@
-@media only screen and (max-width: 1200px) {
-    /* Ваши стили для маленьких экранов */
-}
+ /*@media only screen and (max-width: 1200px) {
+    Ваши стили для маленьких экранов
+} */
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
