--- a/x.css
+++ b/x.css
@@ -1,6 +1,6 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1024px) {
     /* Ваши стили для маленьких экранов*/
-} 
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -114,4 +114,4 @@ input[type="button"] {
     font-size: 2em; /* Используем относительные единицы */
     text-align: center;
     display: none;
-}
+}}
